Hide preamp in EQ when Phonon backend does not support it.

Prevents some confusion.

BUG: 324976