src/EngineController.h
@@ -40,7 +40,7 @@
 #include <Phonon/EffectParameter>
 #include <phonon/audiodataoutput.h>
 
-static const int s_equalizerBandsCount = 10; // Number of equalizer parameters excluding Preamp
+static const int s_equalizerBandsNum = 10; // Number of equalizer parameters excluding Preamp
 
 class Fadeouter;
 namespace Capabilities { class MultiPlayableCapability; class MultiSourceCapability; }
